# sentinel-x

./: .dockerignore  .gitignore  CMakeLists.txt  README.md
docker/: Dockerfile  docker-compose.yml
include/: sentinel_common.h  sentinel_core.h  sentinel_dpi.h  sentinel_ids_ips.h  sentinel_notification.h  sentinel_waf.h  sentinel_zero_trust.h
k8s/: sentinel-x-deployment.yaml
src/: main.c
src/common/: hashmap.c  log.c  notification.c
src/core/: filter.c  live_capture.c  state_table.c
src/dpi/: dns_parser.c  dpi.c  http_parser.c  tls_parser.c
src/ids_ips/: ids.c  ips.c
src/waf/: waf.c
src/zero_trust/: trust_engine.c
